test pour vérifier que App génère le fichier output.txt